* Added better emoticon support (no more mangling!) [pyborg.py]
* Added code to capitialise certain emoticons so they look better [pyborg.py]
* Alia will now attempt to rejoin after being kick, if she cannot, she will remove the channel [pyborg-irc.py]
* Altered the stealth-mode version reply to be more up to date ;) [pyborg-irc.py]
* Better quoted text support added with some untouched emoticons [pyborg.py]
* Added better url stripping [pyborg.py & pyborg-irc.py]
* Added better nick titleing (still not as good as hard coding it, but better ;)) [pyborg-irc.py]
* Added self-optimising (self-purging and saving) function at 2 hour intervals [pyborg.py]
* Made commands only work for masters even if stealth mode is set [pyborg-irc.py]
* Fixed the IRC commands using nicknames (fixes ignore and censored in channels) [pyborg-irc.py]
* Redid logging format to look more natural when sent to masters [pyborg-irc.py]
* Alia will now remove the corrupt archive.zip & use the *.dat files instead (happens after a crash) [pyborg.py]
* Added a logging function that outputs private conversation (except with Masters) [pyborg-irc.py]
* Added timestamps to the outputted log files and added the date to the end of file [pyborg-irc.py]
* Added dictionary rebuilding daily to self-optimising function [pyborg.py]
* Added IM interface using a modified irc module and bitlbee [pyborg-im.py & alia-im]
* Fixed all the dictionary related bugs which caused random quits [pyborg.py]
* Added code to strip unknown characters while learning [pyborg.py]
* Removed colour and special character stripping code (didn't work right anyway) [pyborg-irc.py & pyborg-im.py]
* Modified cfg file generation to be closer to alia's default ones [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Redid files to create smaller bot logs when using the bash scripts [pyborg.py, pyborg-irc.py & pyborg-im.py]
* Removed the parts of pyborg we're not using - people who wants the full pyborg can download it.